# pylinbs

./: Pipfile  README.md  main_application.py  main_pylinbs.py  main_pyplugin.py  pyproject.toml
plugins/: identity.py
plugins/double/: double_negative.py  double_positive.py
pylinbs/: __init__.py  pylinbs.py
pyplugin/: __init__.py  plugin.py  plugin_collection.py
pyplugin/plugins/: identity.py
pyplugin/plugins/double/: double_negative.py  double_positive.py
