[tool.poetry]
name = "pylinbs"
version = "0.1.0"
description = "PyLinBS - Python Linux BootStrap"
authors = ["Tim Klein Nijenhuis <tim@hetorus.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pygments = "^2.18.0"
pyinquirer = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
